# TailTrail-backend

./: .dockerignore  .env.dev.example  .gitignore  Makefile  WEBSOCKET_GUIDE.md  alembic.ini  docker-compose.dev.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 069e7cc66d82_add_phone_is_verified_image_url_to_.py  32c533488618_add_likes_table.py  4867d799c984_add_chat_and_message_tables.py  4f7223597601_create_post.py  5797cf860245_create_user_blocks_table.py  69e10d3ecf76_add_user_blocks_table.py  7fe74aee49e3_add_blocks_table.py  a95808c7c5bb_add_phone_and_image_url_to_users_table.py  d49ce72b2223_edit_post.py  eaf2d61a2e32_remove_username_and_make_phone_optional.py  merge_chat_and_blocks_migrations.py
docker/: Dockerfile  Dockerfile.dev
requirements/: base.txt  dev.txt
src/: app.py  config.py  database.py  dependencies.py  routes.py  websocket_manager.py
src/controllers/: auth_controller.py  block_controller.py  chat_controller.py  message_controller.py  post_controller.py  user_controller.py  websocket_controller.py
src/dao/: base_dao.py  sqlalchemy_dao.py
src/models/: __init__.py  block.py  chat.py  like.py  message.py  post.py  user.py  user_block.py
src/repositories/: base_repository.py  block_repository.py  chat_repository.py  message_repository.py  post_repository.py  user_block_repository.py  user_repository.py
src/schemas/: block.py  chat.py  message.py  post.py  user.py
src/services/: block_service.py
src/services/chat/: chat_service.py  message_service.py
src/services/post/: __init__.py  post_service.py
src/services/user/: user_block_service.py  user_service.py
src/utils/: exceptions.py
src/utils/exceptions/: __init__.py  exceptions.py
src/utils/llm/: gemini.py
src/utils/token/auth/: token_util.py
src/utils/upload/: __init__.py  base_upload_service.py  s3_upload_service.py  upload_service.py
tests/: conftest.py  conftest_simple.py  test_auth_controller.py  test_post_controller.py  test_simple.py  test_user_controller.py
