[project]
name = "tailtrail-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.1",
    "asyncpg==0.30.0",
    "click==8.1.8",
    "fastapi==0.115.8",
    "Mako==1.3.9",
    "MarkupSafe==3.0.2",
    "pydantic==2.10.6",
    "pydantic-settings==2.0.3",
    "SQLAlchemy[asyncio]==2.0.38",
    "starlette==0.45.3",
    "typing_extensions==4.12.2",
    "uvicorn==0.34.0",
    "greenlet>=3.1.0",
    "bcrypt==4.3.0",
    "pyjwt==2.10.1",
    "pydantic[email]==2.10.6",
    "boto3>=1.39.3",
    "python-multipart>=0.0.20",
    "aiohttp>=3.12.14",
    "google-generativeai==0.8.3",
    "pillow==10.4.0",
]

[tool.uv.scripts]
dev = "uvicorn src.app:app --reload --host 0.0.0.0 --port 8000"
test = "pytest -v"
test-cov = "pytest --cov=src --cov-report=html"
lint = "flake8 src tests"
format = "black src tests"
typecheck = "mypy src"

[project.optional-dependencies]
dev = [
    "pytest==8.3.5"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
